# rust_learnning

./: .env  Cargo.toml  diesel.toml
migrations/2025-05-06-060533_create_contacts/: up.sql
src/: db.rs  main.rs  schema.rs
src/controllers/: contact_controller.rs  mod.rs  post_controller.rs
src/models/: api_response.rs  contact.rs  mod.rs  post.rs
src/repositories/: contact.rs  contact_repository.rs  mod.rs  post.rs  post_repository.rs
