[package]
name = "hello_world"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
tokio = { version = "1.44.2", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
diesel = { version = "2.2.0", features = ["postgres", "r2d2"] }
dotenvy = "0.15.7"
anyhow = "1.0.98"
validator = { version = "0.20.0", features = ["derive"]}
serde_json = "1.0.140"
